<resources>
    <string name="app_name">iHome</string>
    <string name="profile">Profile</string>
    <string name="message">Message Center</string>
    <string name="questions">FAQ &amp; Questions</string>
    <string name="about_user">About user</string>
    <string name="user_email">User Email</string>
    <string name="user">User</string>
    <string name="device_name">Device name</string>
    <string name="scene">Set Scene</string>
    <string name="work_mode">Set Work Mode</string>
    <string name="add_task">Add task</string>
    <string name="weather">Weather</string>
    <string name="temp">Weather Temp</string>
    <string name="humidity">Weather Humidity</string>
    <string name="devices">Devices</string>
    <string name="search_dev">Search Devices</string>
    <string name="fav_events">Favourite events</string>
    <string name="no_dev_found">No devices found</string>
    <string name="no_fav_ev_found">No favourite events found</string>
    <string name="login">Login</string>
    <string name="login_title">Log in</string>
    <string name="ent_ccode">Enter Country Code</string>
    <string name="ent_email">Enter E-mail</string>
    <string name="ent_pass">Enter Password</string>
    <string name="sigh_in">sigh in</string>
    <string name="sigh_up">sigh up</string>
    <string name="valid">Validate</string>
    <string name="regist">Register</string>
    <string name="ent_ver_code">Enter Verification Code</string>
    <string name="ent_name">Enter name</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="device">Device</string>
    <string name="event_type">Event type</string>
    <string name="weather_desc">When weather changes</string>
    <string name="weather_exm">Example: when local temperature is greater than 28 °C</string>
    <string name="schedule">Schedule</string>
    <string name="sched_desc">Example: 7:00 AM every morning</string>
    <string name="auto">Automation</string>
    <string name="recom">Recommend</string>
    <string name="no_rec_found">No recommend tasks found</string>
    <string name="no_ev_found">No tasks found</string>
    <string name="cel">0 °C</string>
    <string name="gt">&gt;</string>
    <string name="lt">&lt;</string>
    <string name="eq">=</string>
    <string name="add_dev">Add Device</string>
    <string name="create_task">Create Task</string>
    <string name="cont_cen">Control Center</string>
    <string name="hi">Hi, user!</string>
    <string name="user_city">City</string>
    <string name="time_zone">Time Zone</string>
    <string name="ok">OK</string>
    <string name="task_name">Task name</string>
    <string name="error">Error</string>
    <string name="gps_desc">Please check your GPS connection and try again!</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="thu">Thursday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="wed">Wednesday</string>
    <string name="fri">Friday</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="cond">Condition</string>
    <string name="delete">Delete</string>
    <string name="status_desc">Please check device connection and try again!</string>
    <string name="retry">Retry</string>
    <string name="wifi_desc">Please check your Wifi login/password and try again!</string>
    <string name="light_bulb">Light bulb</string>
    <string name="socket">Socket</string>
    <string name="camera">Camera</string>
    <string name="conditioner">Conditioner</string>
    <string name="heater">Heater</string>
    <string name="other">Other</string>
    <string name="dev_type">Device type</string>
    <string name="ent_wifi_login">Enter wifi login</string>
    <string name="ent_wifi_pass">Enter wifi password</string>
    <string name="connect">Connect</string>
    <string name="check">Checking…</string>
    <string name="setting">Settings</string>
    <string name="logout">Log Out</string>
    <string name="delete_ac">Delete account</string>
    <string name="translate">Change language</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="control">Control</string>
    <string name="wifi_config">Wifi config in progress</string>
    <string name="weather_fail">Weather searching failed with error:</string>
    <string name="home_creat_suc">Home creation successful!</string>
    <string name="home_creat_fail">Home creation failed with error:</string>
    <string name="home_found_suc">Home found successful!</string>
    <string name="home_found_fail">Home finding failed with error:</string>
    <string name="dev_det_fail">Devices detection failed with error:</string>
    <string name="dev_det_suc">Devices detection successful!</string>
    <string name="dev_new_suc">New device found!</string>
    <string name="dev_bind_suc">Device bind successful!</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="light_success">Light change successful!</string>
    <string name="bright_success">Light brightness change successful!</string>
    <string name="work_mode_success">Work mode change successful!</string>
    <string name="scene_success">Scene change successful!</string>
    <string name="status_suc">Device status change successful!</string>
    <string name="status_desc_p1">Please check</string>
    <string name="status_desc_p2">device connection and try again!</string>
    <string name="login_fail">Login failed with error:</string>
    <string name="login_suc">Login successful!</string>
    <string name="regist_fail">Registration failed with error:</string>
    <string name="regist_suc">Registration successful!</string>
    <string name="ver_code_suc">Successfully sent verification code!</string>
    <string name="ver_code_fail">Failed to sent verification code with error:</string>
    <string name="repeat_title">Select time for repeat</string>
    <string name="delete_scene">Delete scene success!</string>
    <string name="cond_desc">When temp</string>
    <string name="task_add_suc">Task add successful!</string>
    <string name="task_add_fail">Task adding failed with error:</string>
    <string name="lng_change">Language changed successful!</string>
    <string name="delete_ac_suc">Account deleting successful!</string>
    <string name="delete_ac_fail">Account deleting failed with error:</string>
    <string name="logout_suc">Log out successful!</string>
    <string name="logout_fail">Log out failed with error:</string>
    <string name="welcome">Welcome to iHome</string>
    <string name="wifi_login">Wifi log in</string>
    <string name="regist_title">Registration</string>
    <string name="work">Work</string>
    <string name="read">Read</string>
    <string name="casual">Casual</string>
    <string name="goodnight">Goodnight</string>
    <string name="scene_type">Scene</string>
    <string name="color">Color</string>
    <string name="white">White</string>
</resources>
