<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/cbMon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbSun" />

    <CheckBox
        android:id="@+id/cbTue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbMon" />

    <CheckBox
        android:id="@+id/cbThur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbWed" />

    <CheckBox
        android:id="@+id/cbSat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbFr" />

    <CheckBox
        android:id="@+id/cbSun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbWed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbTue" />

    <CheckBox
        android:id="@+id/cbFr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbThur" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_border"
        android:text="@string/cancel"
        android:textColor="@color/primary_600"
        app:layout_constraintEnd_toStartOf="@+id/btnSubmit"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbSat"
        tools:ignore="ButtonStyle" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_border"
        android:text="@string/submit"
        android:textColor="@color/primary_600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbSat"
        tools:ignore="ButtonStyle" />

</androidx.constraintlayout.widget.ConstraintLayout>
