<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">
    <include
        android:id="@+id/include"
        layout="@layout/setting_toolbar" />

    <LinearLayout
        android:id="@+id/translate"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants"
        android:focusable="true"
        android:gravity="center"
        android:paddingStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/translate"
            android:src="@drawable/translate"
            app:tint="@color/base_900" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="40"
            android:text="@string/translate"
            android:textColor="@color/base_900"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/deleteAccount"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants"
        android:focusable="true"
        android:gravity="center"
        android:paddingStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/translate">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/delete_ac"
            android:src="@drawable/delete"
            app:tint="@color/base_900" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="40"
            android:text="@string/delete_ac"
            android:textColor="@color/base_900"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants"
        android:focusable="true"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteAccount">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/logout"
            android:src="@drawable/logout"
            app:tint="@color/error_900" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/logout"
            android:textColor="@color/error_900"
            android:textSize="16sp" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigatin_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/button_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>
